--- a/src/app/meaning-test/meaning-test.component.css
+++ b/src/app/meaning-test/meaning-test.component.css
@@ -1,4 +1,4 @@
-/* src/app/test/test.component.css */
+/* src/app/meaning-test/meaning-test.component.css */
 
 .test-container,
 .result-container,
