--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,11 @@
-<!-- <mat-toolbar color="primary">
-  <span>Flashcards App</span>
-  <button mat-button routerLink="/flashcards" routerLinkActive="active" ariaCurrentWhenActive="page">Flashcards</button>
-  <button mat-button routerLink="/test" routerLinkActive="active" ariaCurrentWhenActive="page">Test</button>
-</mat-toolbar>
-
-<router-outlet></router-outlet> -->
-
 <!-- src/app/app.component.html -->
 
 <mat-toolbar color="primary">
   <span>Flashcards App</span>
   <div class="toolbar-buttons">
-    <button mat-button routerLink="/flashcards" routerLinkActive="router-link-active">Flashcards</button>
-    <button *ngIf="hasEnoughFlashcards()" mat-button routerLink="/test" routerLinkActive="router-link-active">Test</button>
+    <button mat-button class="button-modern" routerLink="/flashcards" routerLinkActive="router-link-active">Flashcards</button>
+    <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/test" routerLinkActive="router-link-active">Test</button>
+    <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/meaning-test" routerLinkActive="router-link-active">Meaning Test</button>
   </div>
 </mat-toolbar>
 
