--- a/src/app/flashcard/flashcard.component.css
+++ b/src/app/flashcard/flashcard.component.css
@@ -1,5 +1,4 @@
 /* src/app/flashcard/flashcard.component.css */
-
 .flashcard-container {
   max-width: 600px;
   margin: 20px auto;
@@ -57,7 +56,8 @@
   transform: rotateY(180deg);
 }
 
-.flashcard-front, .flashcard-back {
+.flashcard-front,
+.flashcard-back {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -94,6 +94,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column; /* Align content vertically */
+}
+
+.flashcard-image {
+  max-width: 100%;
+  max-height: 150px; /* Adjust max-height of the image */
+  margin-top: 10px;
 }
 
 .flashcard-content-back h3 {
@@ -112,4 +119,11 @@
   right: 10px; /* Align to the right */
   display: flex;
   gap: 10px; /* Add gap between buttons */
+}
+
+.photo-field {
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Add some spacing between elements */
 }
