--- a/src/app/flashcard/flashcard.component.html
+++ b/src/app/flashcard/flashcard.component.html
@@ -54,42 +54,46 @@
     <button mat-icon-button (click)="previousFlashcard()" [disabled]="currentFlashcardIndex === 0">
       <mat-icon>arrow_back</mat-icon>
     </button>
-    <div class="flashcard-wrapper">
-      <div *ngIf="flashcards.length > 0; else noFlashcards" class="flashcard" (click)="flipCard()">
-        <div class="flashcard-inner" [class.flipped]="isFlipped">
-          <div class="flashcard-front">
-            <div class="card-number">{{ currentFlashcardIndex + 1 }}/{{ flashcards.length }}</div>
-            <div class="flashcard-content">
-              <mat-card-title>
-                {{ flashcards[currentFlashcardIndex]?.word }}
-              </mat-card-title>
-              <img *ngIf="flashcards[currentFlashcardIndex]?.photo" [src]="flashcards[currentFlashcardIndex]?.photo" alt="Flashcard Image" class="flashcard-image" />
-            </div>
-            <div class="flashcard-actions">
-              <button mat-mini-fab color="accent" (click)="editFlashcard(currentFlashcardIndex); $event.stopPropagation();"><mat-icon>edit</mat-icon></button>
-              <button mat-mini-fab color="warn" (click)="deleteFlashcard(currentFlashcardIndex); $event.stopPropagation();"><mat-icon>delete</mat-icon></button>
-            </div>
-          </div>
-          <div class="flashcard-back">
-            <div class="card-number">{{ currentFlashcardIndex + 1 }}/{{ flashcards.length }}</div>
-            <div class="flashcard-content-back">
-              <h3>Meaning:</h3>
-              <p>{{ flashcards[currentFlashcardIndex]?.meaning }}</p>
-              <ng-container *ngIf="flashcards[currentFlashcardIndex]?.example">
-                <h3>Example:</h3>
-                <p>{{ flashcards[currentFlashcardIndex]?.example }}</p>
-              </ng-container>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- No flashcards message -->
-      <ng-template #noFlashcards>
-        <p>No flashcards available for the selected filter.</p>
-      </ng-template>
-    </div>
     <button mat-icon-button (click)="nextFlashcard()" [disabled]="currentFlashcardIndex >= this.flashcards.length - 1">
       <mat-icon>arrow_forward</mat-icon>
     </button>
+  </div>
+  <div class="flashcard-wrapper">
+    <div *ngIf="flashcards.length > 0; else noFlashcards" class="flashcard" (click)="flipCard()">
+      <div class="flashcard-inner" [class.flipped]="isFlipped">
+        <div class="flashcard-front">
+          <div class="card-number">{{ currentFlashcardIndex + 1 }}/{{ flashcards.length }}</div>
+          <div class="flashcard-content">
+            <mat-card-title>
+              {{ flashcards[currentFlashcardIndex]?.word }}
+            </mat-card-title>
+            <img *ngIf="flashcards[currentFlashcardIndex]?.photo" [src]="flashcards[currentFlashcardIndex]?.photo" alt="Flashcard Image" class="flashcard-image" />
+          </div>
+          <div class="flashcard-actions">
+            <button mat-mini-fab color="accent" (click)="editFlashcard(currentFlashcardIndex); $event.stopPropagation();">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button mat-mini-fab color="warn" (click)="deleteFlashcard(currentFlashcardIndex); $event.stopPropagation();">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </div>
+        </div>
+        <div class="flashcard-back">
+          <div class="card-number">{{ currentFlashcardIndex + 1 }}/{{ flashcards.length }}</div>
+          <div class="flashcard-content-back">
+            <h3>Meaning:</h3>
+            <p>{{ flashcards[currentFlashcardIndex]?.meaning }}</p>
+            <ng-container *ngIf="flashcards[currentFlashcardIndex]?.example">
+              <h3>Example:</h3>
+              <p>{{ flashcards[currentFlashcardIndex]?.example }}</p>
+            </ng-container>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- No flashcards message -->
+    <ng-template #noFlashcards>
+      <p>No flashcards available for the selected filter.</p>
+    </ng-template>
   </div>
 </div>
