--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,6 +3,10 @@
   <mat-card-content>
     <form (ngSubmit)="signUp()">
       <mat-form-field appearance="fill">
+        <mat-label>Display Name</mat-label>
+        <input matInput type="text" [(ngModel)]="displayName" name="displayName" required> <!-- Display Name field -->
+      </mat-form-field>
+      <mat-form-field appearance="fill">
         <mat-label>Email</mat-label>
         <input matInput type="email" [(ngModel)]="email" name="email" required>
       </mat-form-field>
