--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
     <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/meaning-test" routerLinkActive="router-link-active">Meaning Test</button>
     <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/sentence-test" routerLinkActive="router-link-active">Sentence Test</button>
     <button mat-button class="button-modern" routerLink="/signout">Sign Out</button> <!-- Add Sign Out button -->
+    <span *ngIf="displayName" class="button-modern">Welcome, {{ displayName }}</span>
   </div>
   <ng-template #mobileMenu>
     <button mat-icon-button [matMenuTriggerFor]="menu">
@@ -19,6 +20,7 @@
       <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/meaning-test" routerLinkActive="router-link-active">Meaning Test</button>
       <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/sentence-test" routerLinkActive="router-link-active">Sentence Test</button>
       <button mat-menu-item routerLink="/signout">Sign Out</button> <!-- Add Sign Out item -->
+      <span *ngIf="displayName" class="button-modern">Welcome, {{ displayName }}</span>
     </mat-menu>
   </ng-template>
 </mat-toolbar>
